# tau

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  ROADMAP.md  package.json
.github/workflows/: desktop-windows.yml
apps/desktop/: README.md  package.json
apps/desktop/scripts/: copy-installer.mjs  gen-icons.py
apps/desktop/src/: index.html  main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: app-commands.toml
apps/desktop/src-tauri/src/: lib.rs
docs/: desktop-install.md
extensions/: mirror-server.ts  pi-command-adapter.ts
public/: app.js  desktop-chrome.js  index.html  manifest.json  message-renderer.js  style.css  tau-endpoint.js  themes.js
