[package]
name = "tau-desktop"
version = "0.3.2"
description = "gzTau desktop shell for Pi mirror UI (Windows installer)"
authors = ["gzjggg"]
edition = "2021"

[lib]
name = "tau_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = "2"
url = "2"
